[package]
name = "ut181a-cli"
version = "0.1.0"
authors = ["Anton Ageev <antage@gmail.com>"]
categories = ["hardware-support"]
description = "Uni-T UT181A DMM remote control CLI"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
keywords = ["dmm", "ut181a"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/antage/ut181a-cli"

[dependencies]
ansi_term = "^0.10.2"
clap = "^2.26.2"
error-chain = "^0.11.0"

[dependencies.ut181a]
path = "../ut181a"
